--- a/css/grp.css
+++ b/css/grp.css
@@ -1,251 +1,276 @@
 p {
-  line-height: 1.3em;
-}
+  line-height: 1.3em; }
 
 body {
-  color: #333;
-}
+  color: #333; }
 
 body,
 input,
 select,
 table,
 textarea {
-  font: 13px Arial;
-}
+  font: 18px Arial; }
+
+h1 {
+  font-size: 26px; }
 
 hr {
   margin: 20px 0;
   border: 0;
   border-top: 1px solid #eeeeee;
-  border-bottom: 1px solid #ffffff;
-}
+  border-bottom: 1px solid #ffffff; }
+
+a {
+  text-decoration: none; }
+
+footer {
+  font-size: 15px; }
 
 .alert {
   position: relative;
-  padding: 0.75rem 1.25rem;
+  padding: .75rem 1.25rem;
   margin-bottom: 1rem;
   border: 1px solid transparent;
-  border-radius: 0.25rem;
-}
+  border-radius: .25rem; }
 
 .alert-default {
   color: #666;
   background-color: white;
-  border-color: #e7e7e7;
-}
+  border-color: #e7e7e7; }
 
 .alert-primary {
   color: #1887B9;
   background-color: #c0e6f7;
-  border-color: #1887B9;
-}
+  border-color: #1887B9; }
 
 .alert-secondary {
   color: #999999;
   background-color: white;
-  border-color: #999999;
-}
+  border-color: #999999; }
 
 .alert-warning {
   color: #FF7D00;
   background-color: #fff2e6;
-  border-color: #FF7D00;
-}
+  border-color: #FF7D00; }
 
 .alert-danger {
   color: #D80878;
   background-color: #fdc9e5;
-  border-color: #D80878;
-}
+  border-color: #D80878; }
 
 .alert-success {
   color: #81BE23;
   background-color: #e7f6d0;
-  border-color: #81BE23;
-}
+  border-color: #81BE23; }
 
 .bg-default {
   background: #e7e7e7;
-  color: #666;
-}
+  color: #666; }
 
 .bg-primary {
   background: #1887B9;
-  color: white;
-}
+  color: white; }
 
 .bg-secondary {
   background: #999999;
-  color: white;
-}
+  color: white; }
 
 .bg-danger {
   background: #D80878;
-  color: white;
-}
+  color: white; }
 
 .bg-warning {
   background: #FF7D00;
-  color: white;
-}
+  color: white; }
 
 .bg-success {
   background: #81BE23;
-  color: white;
-}
+  color: white; }
 
 .bg-white {
-  background: #fff;
-}
+  background: #fff; }
 
 .bg-blizzard-blue {
-  background: #b0e1f3;
-}
+  background: #b0e1f3; }
 
 .bg-humming-bird {
-  background: #cdecf7;
-}
+  background: #cdecf7; }
 
 .bg-humming-bird-light {
-  background: #e3f4fb;
-}
+  background: #e3f4fb; }
+
+.btn-primary {
+  background: #0079B5;
+  border: 2px solid #0079B5; }
+
+.btn-primary:hover {
+  background: #005580;
+  border: 2px solid #005580; }
+
+.btn-secondary {
+  background: #D3E3EB;
+  color: #0079B5 !important;
+  border: 2px solid #D3E3EB; }
+
+.btn-secondary:hover {
+  background: #B0CEDD;
+  border: 2px solid #B0CEDD; }
+
+.btn-tertiary {
+  background: white;
+  color: #0079B5 !important;
+  border: 2px solid #0079B5; }
+
+.btn-tertiary:hover {
+  background: #0079B5;
+  color: white !important;
+  border: 2px solid #0079B5; }
+
+.btn-disable {
+  background: #D3E3EB;
+  color: #8D8F90 !important;
+  border: 2px solid #D3E3EB; }
+
+.btn-focused {
+  background: #0079B5;
+  border: 2px solid #D3E3EB; }
+
+.btn-focused:focus {
+  background: #0079B5;
+  color: #005580 !important;
+  border: 2px solid #0079B5; }
+
+.btn-progress {
+  background: #0079B5;
+  border: 2px solid #0079B5; }
+
+.btn-progress:hover {
+  background: #005580;
+  border: 2px solid #005580; }
+
+.btn-cancel {
+  background: #F0F0F0;
+  color: #333333 !important;
+  border: 2px solid #F0F0F0; }
+
+.btn-cancel:hover {
+  background: #CCCCCC;
+  color: #fff !important;
+  border: 2px solid #CCCCCC; }
+
+.btn-file {
+  background: white;
+  color: #0079B5 !important;
+  border: 2px solid #0079B5; }
+
+.btn-file:hover {
+  background: #0079B5;
+  color: white !important;
+  border: 2px solid #0079B5; }
 
 .btn {
-  border-radius: 3px;
+  border-radius: 8px;
   color: white;
   cursor: pointer;
   display: inline-block;
-  font-weight: 400;
   text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  line-height: 1.5;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+  padding: 12px 24px; }
 
+/*
 .btn-default {
-  background: #e7e7e7;
-  color: #666;
+  background: $default;
+  color: $text-color;
 }
-
 .btn-default:hover, .btn-default:focus, .btn-default:active {
-  background-color: #cecece;
-  border-color: #cecece;
+  background-color: darken($default, 10%);
+  border-color: darken($default, 10%);
 }
-
 .btn-primary {
-  background: #1887B9;
+  background: $primary;
 }
-
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background-color: #12668c;
-  border-color: #12668c;
+  background-color: darken($primary, 10%);
+  border-color: darken($primary, 10%);
 }
-
 .btn-secondary {
-  background: #999999;
+  background: $secondary;
 }
-
 .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
-  background-color: gray;
-  border-color: gray;
+  background-color: darken($secondary, 10%);
+  border-color: darken($secondary, 10%);
 }
-
 .btn-info {
-  background: #74b1dd;
+  background: $info;
 }
-
 .btn-info:hover, .btn-info:focus, .btn-info:active {
-  background-color: #4b9ad3;
-  border-color: #4b9ad3;
+  background-color: darken($info, 10%);
+  border-color: darken($info, 10%);
 }
-
 .btn-success {
-  background: #81BE23;
+  background: $success;
 }
-
 .btn-success:hover, .btn-success:focus, .btn-success:active {
   background-color: #7ca53f !important;
   border-color: #7ca53f !important;
 }
-
 .btn-danger {
-  background: #D80878;
+  background: $danger;
   color: #fff;
 }
-
 .btn-danger:hover, .btn-danger:focus, .btn-danger:active {
   color: #fff;
   background-color: #bf2d7b !important;
   border-color: #bf2d7b !important;
 }
-
 .btn-warning {
-  background: #FF7D00;
+  background: $warning;
   color: #fff;
 }
-
 .btn-outline-warning {
-  border: 1px solid #FF7D00;
-  background: #fff2e6;
-  color: #FF7D00;
+  border: 1px solid $warning;
+  background: lighten($warning, 45%);
+  color: $warning;
 }
-
 .btn-warning:hover, .btn-warning:focus, .btn-warning:active {
   color: #fff;
   background-color: #e6872e !important;
   border-color: #e6872e !important;
 }
-
+  */
 .card {
   padding: 20px;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 .card-bg-primary {
   background: #1887B9;
-  color: white;
-}
+  color: white; }
 
 .card-bg-secondary {
   background: #999999;
-  color: white;
-}
+  color: white; }
 
 .card-bg-warning {
   background: #FF7D00;
-  color: white;
-}
+  color: white; }
 
 .card-bg-danger {
   background: #D80878;
-  color: white;
-}
+  color: white; }
 
 .card-bg-success {
   background: #81BE23;
-  color: white;
-}
+  color: white; }
 
 .card-icon {
   font-size: 2.3em;
-  margin-right: 20px;
-}
+  margin-right: 20px; }
 
 .card-fold {
   position: relative;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 .card-fold-bottom-right:before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   right: 0;
@@ -254,32 +279,26 @@ hr {
   border-top-left-radius: 3px;
   -webkit-box-shadow: 3px 3px 3px 3px white;
   -moz-box-shadow: 3px 3px 3px 3px white;
-  box-shadow: 3px 3px 3px 3px white;
-}
+  box-shadow: 3px 3px 3px 3px white; }
 
 .card-fold-bg-primary.fold-bottom-right:before {
-  border-color: #1887B9 white;
-}
+  border-color: #1887B9 white; }
 
 .card-fold-bg-danger.fold-bottom-right:before {
-  border-color: #D80878 white;
-}
+  border-color: #D80878 white; }
 
 .card-fold-bg-warning.fold-bottom-right:before {
-  border-color: #FF7D00 white;
-}
+  border-color: #FF7D00 white; }
 
 .card-fold-bg-success.fold-bottom-right:before {
-  border-color: #81BE23 white;
-}
+  border-color: #81BE23 white; }
 
 .fold {
   position: relative;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 .fold-bottom-right:before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   right: 0;
@@ -288,432 +307,348 @@ hr {
   border-top-left-radius: 3px;
   -webkit-box-shadow: 3px 3px 3px 3px white;
   -moz-box-shadow: 3px 3px 3px 3px white;
-  box-shadow: 3px 3px 3px 3px white;
-}
+  box-shadow: 3px 3px 3px 3px white; }
 
 .fold-bg-primary.fold-bottom-right:before {
-  border-color: #1887B9 white;
-}
+  border-color: #1887B9 white; }
 
 .fold-bg-danger.fold-bottom-right:before {
-  border-color: #D80878 white;
-}
+  border-color: #D80878 white; }
 
 .fold-bg-warning.fold-bottom-right:before {
-  border-color: #FF7D00 white;
-}
+  border-color: #FF7D00 white; }
 
 .fold-bg-success.fold-bottom-right:before {
-  border-color: #81BE23 white;
-}
+  border-color: #81BE23 white; }
 
 .form-control {
   padding: 7px;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 3px;
+  border: 1px solid #CCCCCC;
   box-sizing: border-box;
   margin-bottom: 15px;
-}
+  border-radius: 8px; }
 
 .form-control-block {
-  width: 100%;
-}
+  width: 100%; }
+
+.form-search-box {
+  display: flex;
+  align-items: center;
+  border: 1px solid #8D8F90;
+  border-radius: 8px;
+  padding: 5px 10px;
+  width: 20%; }
+
+.form-search-box input {
+  border: none;
+  outline: none;
+  flex: 1; }
+
+.form-search-box .icon {
+  color: #CCCCCC;
+  margin-right: 10px; }
+
+.form-search-box:focus-within {
+  border-color: #0079B5;
+  /* Change this color to your preferred border color */ }
+
+.form-search-box input::placeholder {
+  color: #CCCCCC; }
 
 .outline {
   border-radius: 3px;
   padding: 5px 10px;
-  margin-top: 10px;
-}
+  margin-top: 10px; }
 
 .outline-primary {
-  border: #1887B9 1px solid;
-}
+  border: #1887B9 1px solid; }
 
 .outline-default {
-  border: #e7e7e7 1px solid;
-}
+  border: #e7e7e7 1px solid; }
 
 .outline-info {
-  border: #74b1dd 1px solid;
-}
+  border: #74b1dd 1px solid; }
 
 .outline-success {
-  border: #81BE23 1px solid;
-}
+  border: #81BE23 1px solid; }
 
 .outline-warning {
-  border: #FF7D00 1px solid;
-}
+  border: #FF7D00 1px solid; }
 
 .outline-danger {
-  border: #D80878 1px solid;
-}
+  border: #D80878 1px solid; }
 
 .outline-light-gray {
-  border: #f6f6f6 1px solid;
-}
+  border: #f6f6f6 1px solid; }
 
 .outline-gray {
-  border: #808080 1px solid;
-}
+  border: #808080 1px solid; }
 
 .outline-blizzard-blue {
-  border: #b0e1f3 1px solid;
-}
+  border: #b0e1f3 1px solid; }
 
 .outline-humming-bird {
-  border: #cdecf7 1px solid;
-}
+  border: #cdecf7 1px solid; }
 
 .outline-humming-bird-light {
-  border: #e3f4fb 1px solid;
-}
+  border: #e3f4fb 1px solid; }
 
 .outline-top-primary {
-  border-top: 1px solid #1887B9;
-}
+  border-top: 1px solid #1887B9; }
 
 .outline-left-primary {
-  border-left: 1px solid #1887B9;
-}
+  border-left: 1px solid #1887B9; }
 
 .outline-bottom-primary {
-  border-bottom: 1px solid #1887B9;
-}
+  border-bottom: 1px solid #1887B9; }
 
 .outline-right-primary {
-  border-right: 1px solid #1887B9;
-}
+  border-right: 1px solid #1887B9; }
 
 .outline-top-blizzard-blue {
-  border-top: 1px solid #b0e1f3;
-}
+  border-top: 1px solid #b0e1f3; }
 
 .outline-bottom-blizzard-blue {
-  border-bottom: 1px solid #b0e1f3;
-}
+  border-bottom: 1px solid #b0e1f3; }
 
 .outline-bottom-white {
-  border-bottom: 1px solid #fff;
-}
+  border-bottom: 1px solid #fff; }
 
 .outline-rounded-primary {
   border: 1px solid #1887B9;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 .outline-rounded-default {
   border: 1px solid #e7e7e7;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 .outline-rounded-secondary {
   border: 1px solid #999999;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 .outline-rounded-info {
   border: 1px solid #74b1dd;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 .outline-rounded-success {
   border: 1px solid #81BE23;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 .outline-rounded-info {
   border: 1px solid #74b1dd;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 .outline-rounded-warning {
   border: 1px solid #FF7D00;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 .outline-rounded-danger {
   border: 1px solid #D80878;
-  border-radius: 3px;
-}
+  border-radius: 3px; }
 
 .text-primary {
-  color: #1887B9;
-}
+  color: #1887B9; }
 
 .text-info {
-  color: #74b1dd;
-}
+  color: #74b1dd; }
 
 .text-warning {
-  color: #FF7D00;
-}
+  color: #FF7D00; }
 
 .text-danger {
-  color: #D80878;
-}
+  color: #D80878; }
 
 .text-success {
-  color: #81BE23;
-}
+  color: #81BE23; }
 
 .text-center {
-  text-align: center;
-}
+  text-align: center; }
 
 .text-muted {
-  color: #999;
-}
+  color: #999; }
 
 .text-lg {
-  font-size: 15px;
-}
+  font-size: 15px; }
 
 .text-sm {
-  font-size: 11px;
-}
+  font-size: 11px; }
 
 .text-xs {
-  font-size: 9px;
-}
+  font-size: 9px; }
 
 .text-lg {
-  font-size: 1.3em;
-}
+  font-size: 1.3em; }
 
 .text-sm {
-  font-size: 0.85em;
-}
+  font-size: 0.85em; }
 
 .m-t-1 {
-  margin-top: 1px;
-}
+  margin-top: 1px; }
 
 .m-t-5 {
-  margin-top: 5px;
-}
+  margin-top: 5px; }
 
 .m-t-10 {
-  margin-top: 10px;
-}
+  margin-top: 10px; }
 
 .m-t-15 {
-  margin-top: 15px;
-}
+  margin-top: 15px; }
 
 .m-t-20 {
-  margin-top: 20px;
-}
+  margin-top: 20px; }
 
 .m-t-25 {
-  margin-top: 25px;
-}
+  margin-top: 25px; }
 
 .m-t-30 {
-  margin-top: 30px;
-}
+  margin-top: 30px; }
 
 .m-t-50 {
-  margin-top: 50px;
-}
+  margin-top: 50px; }
 
 .m-t-100 {
-  margin-top: 100px;
-}
+  margin-top: 100px; }
 
 .m-r-1 {
-  margin-right: 1px;
-}
+  margin-right: 1px; }
 
 .m-r-5 {
-  margin-right: 5px;
-}
+  margin-right: 5px; }
 
 .m-r-10 {
-  margin-right: 10px;
-}
+  margin-right: 10px; }
 
 .m-r-15 {
-  margin-right: 15px;
-}
+  margin-right: 15px; }
 
 .m-r-20 {
-  margin-right: 20px;
-}
+  margin-right: 20px; }
 
 .m-r-25 {
-  margin-right: 25px;
-}
+  margin-right: 25px; }
 
 .m-r-50 {
-  margin-right: 50px;
-}
+  margin-right: 50px; }
 
 .m-b-1 {
-  margin-bottom: 1px;
-}
+  margin-bottom: 1px; }
 
 .m-b-5 {
-  margin-bottom: 5px;
-}
+  margin-bottom: 5px; }
 
 .m-b-10 {
-  margin-bottom: 10px;
-}
+  margin-bottom: 10px; }
 
 .m-b-15 {
-  margin-bottom: 15px;
-}
+  margin-bottom: 15px; }
 
 .m-b-20 {
-  margin-bottom: 20px;
-}
+  margin-bottom: 20px; }
 
 .m-b-50 {
-  margin-bottom: 50px;
-}
+  margin-bottom: 50px; }
 
 .m-l-1 {
-  margin-left: 1px;
-}
+  margin-left: 1px; }
 
 .m-l-5 {
-  margin-left: 5px;
-}
+  margin-left: 5px; }
 
 .m-l-10 {
-  margin-left: 10px;
-}
+  margin-left: 10px; }
 
 .m-l-15 {
-  margin-left: 15px;
-}
+  margin-left: 15px; }
 
 .m-l-20 {
-  margin-left: 20px;
-}
+  margin-left: 20px; }
 
 .m-l-50 {
-  margin-left: 50px;
-}
+  margin-left: 50px; }
 
 .p-5 {
-  padding: 5px;
-}
+  padding: 5px; }
 
 .p-10 {
-  padding: 10px;
-}
+  padding: 10px; }
 
 .p-15 {
-  padding: 15px;
-}
+  padding: 15px; }
 
 .p-20 {
-  padding: 20px;
-}
+  padding: 20px; }
 
 .container {
-  margin: auto;
-}
+  margin: auto; }
 
 .row {
-  clear: both;
-}
+  clear: both; }
 
 .col {
   position: relative;
   float: left;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-}
+  border: 1px solid rgba(255, 255, 255, 0.5); }
 
 .col-md-1 {
-  width: 8.3333333333%;
-}
+  width: 8.3333333333%; }
 
 .col-md-2 {
-  width: 16.6666666667%;
-}
+  width: 16.6666666667%; }
 
 .col-md-6 {
-  width: 50%;
-}
+  width: 50%; }
 
 .col-md-8 {
-  width: 50%;
-}
+  width: 50%; }
 
 @media (min-width: 1281px) {
   .col-lg-none {
-    display: none;
-  }
-}
+    display: none; } }
 @media (min-width: 1025px) and (max-width: 1280px) {
   .col-lg-none {
-    display: none;
-  }
-}
+    display: none; } }
 @media (min-width: 768px) and (max-width: 1024px) {
   body {
     min-width: 0 !important;
-    background: none;
-  }
+    background: none; }
 
   .col-sm-none {
-    display: none;
-  }
-}
+    display: none; } }
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
   body {
     min-width: 0 !important;
-    background: none;
-  }
+    background: none; }
 
   .col-sm-none {
-    display: none;
-  }
-}
+    display: none; } }
 @media (min-width: 481px) and (max-width: 767px) {
   body {
     min-width: 0 !important;
-    background: none;
-  }
+    background: none; }
 
   .col-sm-none {
-    display: none;
-  }
-}
+    display: none; } }
 @media (min-width: 321px) and (max-width: 480px) {
   body {
     min-width: 0 !important;
-    background: none;
-  }
+    background: none; }
 
   .col-sm-none {
-    display: none;
-  }
-}
+    display: none; } }
 @media (min-width: 200px) and (max-width: 320px) {
   body {
     min-width: 0 !important;
-    background: none;
-  }
+    background: none; }
 
   .col-sm-none {
-    display: none;
-  }
-}
+    display: none; } }
 @media (min-width: 1281px) {
   .col-md-1 {
-    width: 8.3333333333%;
-  }
-}
+    width: 8.3333333333%; } }
 @media (min-width: 768px) and (max-width: 1024px) {
   .col-md-1 {
-    width: 100%;
-  }
-}
+    width: 100%; } }
 
 /*# sourceMappingURL=grp.css.map */
