--- a/scss/form.scss
+++ b/scss/form.scss
@@ -8,14 +8,41 @@
   //    color: #495057;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 3px; //.25rem;
+  border: 1px solid #CCCCCC;
   //    transition: border-color .15s ease-in-out,
   //        box-shadow .15s ease-in-out;
   box-sizing: border-box;
   margin-bottom: 15px;
+  border-radius: 8px;
 }
 
 .form-control-block {
   width: 100%;
+}
+
+.form-search-box {
+  display: flex;
+  align-items: center;
+  border: 1px solid #8D8F90;
+  border-radius: 8px;
+  padding: 5px 10px;
+  width: 20%;
+}
+
+.form-search-box input {
+  border: none;
+  outline: none;
+  //padding: 10px;
+  flex: 1;
+}
+
+.form-search-box .icon {
+  color: #CCCCCC;
+  margin-right: 10px;
+}
+.form-search-box:focus-within {
+  border-color: $primary-default; /* Change this color to your preferred border color */
+}
+.form-search-box input::placeholder {
+  color: #CCCCCC;
 }
